# hyle

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.sh
.github/workflows/: ci.yml
docs/: APPLICATION.md  COMETBFT_MAPPING.md  CORNER_CASES.md  TRANSPORT.md
include/hyle/core/: blog.h  consensus.h  crypto.h  node.h  snapshot.h  state_machine.h  version.h  wire.h
include/hyle/morphe/: asio_mesh.h  client_rest.h  frame.h  manual.h  rpc.h  rpc_server.h  testnet.h
include/hyle/services/: app.h  bulk.h  config.h  genesis.h  hex.h  keyring.h  keys.h  mempool.h  ops.h  runtime.h  schema.h  sync.h  transport.h
include/hyle/services/kv/: kv_state_machine.h  ledger.h  ops.h  pow.h  state.h
src/core/: blog.cpp  consensus.cpp  crypto.cpp  node.cpp  snapshot.cpp  version.cpp
src/morphe/: asio_mesh.cpp  client_rest.cpp  frame.cpp  main.cpp  manual.cpp  rpc.cpp  rpc_server.cpp  testnet.cpp
src/services/: app.cpp  bulk.cpp  genesis.cpp  keyring.cpp  keys.cpp  mempool.cpp  ops.cpp  runtime.cpp  sync.cpp
src/services/kv/: kv_state_machine.cpp  ledger.cpp  ops.cpp  pow.cpp  state.cpp
src/techne/: main.cpp
tests/: CMakeLists.txt  local_cluster.h  mesh_cluster.h  mock_state_machine.h  sim_cluster.h  sim_mesh.h  test_base.cpp  test_consensus.cpp  test_crypto.cpp  test_e2e.cpp  test_embed.cpp  test_governance.cpp  test_ledger.cpp  test_mint.cpp  test_morphe.cpp  test_node.cpp  test_registry.cpp  test_sim.cpp  test_smoke.cpp  test_snapshot.cpp  test_state.cpp  test_stress.cpp  test_sudo.cpp  test_sync.cpp  test_votewal.cpp  test_wiresync.cpp  tests_main.cpp
